# bountyhound-local

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VAST_AI_SETUP.md  cli.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
config/: celery.conf  models-dual-gpu.yaml  models-h100-awq.yaml  models.yaml  targets.yaml
data/payloads/: auth.yaml  injection.yaml  waf-bypass.yaml
data/templates/: report-psychology.yaml
docs/plans/: 2026-02-07-dual-gpu-upgrade.md
scripts/: bountyhound  download-models.sh  start-vllm.sh  start-workers.sh  start.sh  status.sh  stop.sh  vast-onstart.sh
src/api/: app.py
src/api/templates/: dashboard.html
src/database/: models.py  redis_manager.py
src/models/: vllm_client.py
src/models/prompts/: code.txt  orchestrator.txt  reasoning.txt  reporting.txt  utility.txt  validation.txt
src/orchestrator/: brain.py  cross_target.py  scheduler.py
src/services/: browser.py  credential_manager.py  scope_parser.py
src/workers/: __init__.py  auth.py  celery_app.py  discovery.py  exploit.py  recon.py  reporter.py  validator.py
tests/: test_database.py  test_scheduler.py  test_services.py
